# Desafio-Agentes-Grupo-de-NLP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  organizacao.code-workspace  package-lock.json  pyproject.toml  requirements.txt
assets/: infos.md
base/__MACOSX/: ._biblioteca_aneel_gov_br_legislacao_2016_metadados.json  ._biblioteca_aneel_gov_br_legislacao_2021_metadados.json  ._biblioteca_aneel_gov_br_legislacao_2022_metadados.json
docs/: evalRAGAS.md
docs/Evaluation/: evalRAGAS.md
eval/: questions.json
src/: pyproject.toml
src/agent/: __init__.py  agent.py  chain.py  prompts.py
src/answering/: __init__.py  answerer.py  llm.py  prompt.py
src/core/: config.py  database.py  logger.py
src/ingestion/: chunker.py  embedder.py  parser.py
src/retrieval/: confidence.py  hybrid.py  qdrant_retriever.py  query_expansion.py  reranker.py  semantic.py
src/scripts/: ingest_data.py  plot_results.py  run_eval.py  test_agent.py  test_agent_batch.py  test_answering.py  test_confidence.py  test_retrieval.py
src/ui/: app.py
